discussion/kv_engine/164733/164733_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

ExecutorPool: Improve logging / comments

Make the function names in log messages more explicit / precise; add some more comments.

Change-Id: I95a7f58cd205039b8bbc2fd24db8a5bede5ab545

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-11-02 16:39:56.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-02 16:50:51.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35260/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/executor/folly_executorpool.cc:237:31:
error: use of undeclared identifier "tState"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35260/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41522/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/executor/folly_executorpool.cc(232): error C2065: "tState": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41522/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13778/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/folly_executorpool.cc:237:31: error: use of undeclared identifier "tState" [clang-diagnostic-error]
                    to_string(tState));
                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13778/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/folly_executorpool.cc:237:31:
error: use of undeclared identifier "tState" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13778/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3413/ : FAILURE

Compile error at [2021-11-02T16:42:51.093Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/executor/folly_executorpool.cc:237:31:
error: use of undeclared identifier "tState"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3413/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15393/ : FAILURE

Compile error at [2021-11-02T16:42:48.781Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/executor/folly_executorpool.cc:237:31:
error: ?tState? was not declared in this scope; did you mean ?State??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15393/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15676/ : FAILURE

Compile error at [2021-11-02T16:42:56.579Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/executor/folly_executorpool.cc:237:31:
error: ?tState? was not declared in this scope; did you mean ?State??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15676/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16360/ : FAILURE

Compile error at [2021-11-02T16:43:31.002Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/executor/folly_executorpool.cc:237:31:
error: use of undeclared identifier "tState"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16360/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14556/ : FAILURE

Compile error at [2021-11-02T16:43:05.192Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/executor/folly_executorpool.cc:237:31:
error: use of undeclared identifier "tState"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14556/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23730/ : FAILURE

Compile error at [2021-11-02T16:45:43.462Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/executor/folly_executorpool.cc:237:31:
error: use of undeclared identifier "tState"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23730/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3485/ : FAILURE

Compile error at [2021-11-02T16:46:22.124Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/executor/folly_executorpool.cc:237:31:
error: ?tState? was not declared in this scope; did you mean ?State??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3485/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12579/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
